Added serialization code

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 data
 speech_commands_v0.01.tar.gz
 
+# Model serialization files
+models
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
