--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Audio files
+deploy/audio
+
 # Dataset files
 data
 data.zip
@@ -5,8 +8,6 @@ speech_commands_v0.01.tar.gz
 
 # other files
 server.txt
-deploy/audio
-deploy/nohup.out
 
 # Libraries files
 libs
